--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,12 @@ dependencies:
   stacked: ^3.2.0
   stacked_services: ^1.0.0
 
+  flutter_native_splash: ^2.2.19
+
+
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,6 +55,32 @@ dev_dependencies:
 
   stacked_generator: ^1.0.0
   mockito: ^5.3.2
+
+  flutter_launcher_icons: "^0.12.0"
+
+flutter_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/icons/launcher_icon.png"
+    min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_native_splash:
+  image: assets/icons/splash_icon.png
+  color: "#ffffff"
+
+  color_dark: "#7ec8e3"
+  image_dark: assets/icons/splash_icon_dark.png
+
+  android_12:
+    image: assets/icons/splash_icon.png
+    color: "#ffffff"
+    icon_background_color: "#ffffff"
+
+  android: true
+  ios: true
+  web: false
+  fullscreen: true
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,9 +94,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/launcher_icon.png
+    - assets/icons/splash_icon.png
+    - assets/icons/splash_icon_dark.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
