config: add launcher icons and native splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ flutter_native_splash:
     color: "#ffffff"
     icon_background_color: "#ffffff"
 
+    image_dark: assets/icons/splash_icon_dark.png
+    color_dark: "#7ec8e3"
+    icon_background_color_dark: "#7ec8e3"
+
   android: true
   ios: true
   web: false
