--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
 
   flutter_native_splash: ^2.2.19
   flex_color_scheme: ^6.1.2
+  introduction_screen: ^3.1.7
+  lottie: ^2.3.0
+
+  objectbox: ^2.0.0
+  objectbox_flutter_libs: ^2.0.0
+  path_provider: ^2.0.14
+  path: 
 
 
 dev_dependencies:
@@ -55,6 +62,7 @@ dev_dependencies:
   build_runner: ^2.2.0
 
   stacked_generator: ^1.0.0
+  objectbox_generator: ^2.0.0
   mockito: ^5.3.2
 
   flutter_launcher_icons: "^0.12.0"
@@ -101,6 +109,13 @@ flutter:
     - assets/icons/launcher_icon.png
     - assets/icons/splash_icon.png
     - assets/icons/splash_icon_dark.png
+
+    - assets/images/logo.png
+    - assets/images/onboarding_1.png
+    - assets/images/onboarding_2.png
+    - assets/images/onboarding_3.png
+
+    - assets/loading.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
