--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
 
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  dartz: ^0.10.1
+
+  phosphor_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
