--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   dartz: ^0.10.1
 
   phosphor_flutter: ^1.4.0
+  connectivity_plus: ^3.0.3
+  internet_connection_checker: ^1.0.0+1
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
