--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   connectivity_plus: ^3.0.3
   internet_connection_checker: ^1.0.0+1
   flutter_secure_storage: ^8.0.0
+  open_mail_app: ^0.4.5
 
 dev_dependencies:
   flutter_test:
