--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   google_fonts: ^4.0.3
   flutter_screenutil: ^5.7.0
   animations: ^2.0.7
+  auto_size_text: ^3.0.0
+  liquid_progress_indicator: ^0.4.0
+  syncfusion_flutter_gauges: ^21.1.37
+  envied: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -76,10 +80,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  build_runner: ^2.2.0
+  build_runner: ^2.3.3
 
   json_serializable: ^6.6.1
   freezed: ^2.3.2
+  envied_generator: ^0.3.0
 
   stacked_generator: ^1.0.0
   objectbox_generator: ^2.0.0
