changes to model classes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   syncfusion_flutter_gauges: ^21.1.37
   envied: ^0.3.0
   retrofit: ^4.0.1
+  dio: ^5.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
