--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   retrofit: ^4.0.1
   dio: ^5.1.1
   equatable: ^2.0.5
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
