feat: add DetailsView with SearchView

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -148,6 +148,8 @@ flutter:
     - assets/images/onboarding_1.png
     - assets/images/onboarding_2.png
     - assets/images/onboarding_3.png
+    - assets/images/empty-list-dark.png
+    - assets/images/empty-list-light.png
 
     - assets/loading.json
 
