--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   geolocator: ^9.0.2
   geocoding: ^2.1.0
-  table_calendar:
+  pull_to_refresh: ^2.0.0
   intl:
 
 dev_dependencies:
