--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   pull_to_refresh: ^2.0.0
+  image_picker: ^0.8.7+4
   intl:
 
 dev_dependencies:
