--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   geocoding: ^2.1.0
   pull_to_refresh: ^2.0.0
   image_picker: ^0.8.7+4
+  uuid: ^3.0.7
   intl:
 
 dev_dependencies:
