--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,46 +34,41 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  stacked: ^3.2.0
-  stacked_services: ^1.0.0
+  stacked: ^3.2.7
+  stacked_services: ^1.0.2
 
-  flutter_native_splash: ^2.2.19
-  flex_color_scheme: ^6.1.2
-  introduction_screen: ^3.1.7
-  lottie: ^2.3.0
+  flutter_native_splash: ^2.3.0
+  flex_color_scheme: ^7.1.2
+  introduction_screen: ^3.1.8
+  lottie: ^2.3.2
 
-  objectbox: ^2.0.0
-  objectbox_flutter_libs: ^2.0.0
-  path_provider: ^2.0.14
+  path_provider: ^2.0.15
   path:
-  firebase_auth: ^4.3.0
-  firebase_core: ^2.8.0
-  cloud_firestore: ^4.4.5
-  firebase_storage: ^11.0.16
-  cloud_firestore_odm: ^1.0.0-dev.52
+  firebase_auth: ^4.6.1
+  firebase_core: ^2.13.0
+  cloud_firestore: ^4.7.1
+  firebase_storage: ^11.2.1
+  cloud_firestore_odm: ^1.0.0-dev.59
   google_sign_in: ^6.1.0
 
   freezed_annotation: ^2.2.0
-  json_annotation: ^4.8.0
+  json_annotation: ^4.8.1
   dartz: ^0.10.1
 
-  phosphor_flutter: ^1.4.0
-  connectivity_plus: ^3.0.3
-  internet_connection_checker: ^1.0.0+1
+  phosphor_flutter: ^2.0.0
+  connectivity_plus: ^4.0.1
+  internet_connection_checker: ^1.0.0
   flutter_secure_storage: ^8.0.0
   open_mail_app: ^0.4.5
-  google_fonts: ^4.0.3
-  flutter_screenutil: ^5.7.0
-  animations: ^2.0.7
+  google_fonts: ^4.0.4
+  flutter_screenutil: ^5.8.1
   auto_size_text: ^3.0.0
   liquid_progress_indicator: ^0.4.0
-  syncfusion_flutter_gauges: ^21.1.37
-  envied: ^0.3.0
+  envied: ^0.3.0+3
   retrofit: ^4.0.1
-  dio: ^5.1.1
+  dio: ^5.1.2
   equatable: ^2.0.5
-  shared_preferences: ^2.1.0
-  flutter_neumorphic: ^3.2.0
+  shared_preferences: ^2.1.1
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   pull_to_refresh: ^2.0.0
@@ -82,6 +77,9 @@ dependencies:
   stacked_themes: ^0.3.10
   intl:
 
+dependency_overrides:
+  graphs: 2.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -92,19 +90,18 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  build_runner: ^2.3.3
+  build_runner: 2.4.3
 
-  json_serializable: ^6.6.1
-  freezed: ^2.3.2
-  envied_generator: ^0.3.0
-  retrofit_generator: ^6.0.0+1
+  json_serializable: ^6.7.0
+  freezed: ^2.3.4
+  envied_generator: ^0.3.0+3
+  retrofit_generator: ^7.0.1
 
-  stacked_generator: ^1.0.0
-  objectbox_generator: ^2.0.0
-  cloud_firestore_odm_generator: ^1.0.0-dev.52
-  mockito: ^5.3.2
+  stacked_generator: ^1.3.3
+  cloud_firestore_odm_generator: ^1.0.0-dev.59
+  mockito: ^5.4.0
 
-  flutter_launcher_icons: "^0.12.0"
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: "launcher_icon"
